--- a/input/pagecontent/EventoIniciar.mdX
+++ b/input/pagecontent/EventoIniciar.mdX
@@ -1,4 +1,4 @@
-# Evento: Iniciar
+## Evento: Iniciar
 
 El evento INICIAR tiene asociado los siguientes códigos de evento: 
 
@@ -12,7 +12,7 @@ Los codigos de evento deben ser incluidos en el recurso **MessageHeader.evenCodi
 
 
 
-## Bundle de Envío
+### Bundle de Envío
 
 <br>
 <div align="center" >
@@ -38,7 +38,7 @@ Los recursos usados en este evento son los siguientes:
 * [QuestionnaireResponseInicioLE](StructureDefinition-QuestionnaireResponseInicioLE.html): Recurso utilizado para registrar información relacionada a la anamnesis (ServiceRequest.supportingInfo)
 * [AppointmentInicioLE](StructureDefinition-AppointmentInicioLE.html): Recurso utilizado para registrar información de la cita que da inicio a la solicitud de interconsulta (ServiceRequest.supportingInfo)
 
-## Relaciones de Recursos
+### Relaciones de Recursos
 
 <br>
 <div align="center" >
@@ -47,7 +47,7 @@ Los recursos usados en este evento son los siguientes:
 </div>
 <br>
 
-## Secuencia del Evento
+### Secuencia del Evento
 
 El evento **inicio** debe soportar a siguiente secuencia:
 <div align="center" >
@@ -55,7 +55,7 @@ El evento **inicio** debe soportar a siguiente secuencia:
 </div>
 
 
-## Consideraciones
+### Consideraciones
 
 Las validaciones internas que debe tener el implementador deben considerar cumplir con el conjunto de datos detallado en [Conjunto mínimo de datos](https://docs.google.com/spreadsheets/d/1FfW2gQvTMJbNpr2mH2DFpsftkMEPr5CW2ed9MkryuH4/edit#gid=0&range=A2)
 
@@ -73,11 +73,11 @@ El Bundle de envío debe cumplir con las siguientes condiciones en este evento:
 * Debe incluir el recurso [ObservationInicioLE](StructureDefinition-ObservationInicioLE.html)
 
 
-## Mensaje Bundle de Ejemplo
+### Mensaje Bundle de Ejemplo
 
 * [BundleInicioLE](Bundle-EjemploBundleInicio.html)
 
-## Notas
+### Notas
 
 * Notas Adicionales
 
