--- a/input/pagecontent/EventoPriorizar.mdX
+++ b/input/pagecontent/EventoPriorizar.mdX
@@ -1,4 +1,4 @@
-# Evento: Priorizar
+## Evento: Priorizar
 
 El evento Priorizar tiene asociado los siguientes códigos de evento: 
 
@@ -11,7 +11,7 @@ El evento Priorizar tiene asociado los siguientes códigos de evento:
 Los codigos de evento deben ser incluidos en el recurso **MessageHeader.evenCoding.code**
 
 
-## Bundle de Envío
+### Bundle de Envío
 
 
 <br>
@@ -31,7 +31,7 @@ Los recursos usados en este evento son los siguientes:
 * [PractitionerLE](StructureDefinition-PractitionerLE.html): Recurso que permite reflejar la informacion asociada a la identificación del profesional de la salud.
 * [OrganizationLE](StructureDefinition-OrganizationLE.html): Recurso que permite relacionar la interconsulta con el establecimiento de destino
 * [PatientLE](StructureDefinition-PatientLE.html): Recurso utilizado para registrar información relacionada al paciente (ServiceRequest.subject)
-## Relaciones de Recursos
+### Relaciones de Recursos
 
 <br>
 <div align="center" >
@@ -43,7 +43,7 @@ Los recursos usados en este evento son los siguientes:
 
 
 
-## Secuencia del Evento
+### Secuencia del Evento
 
 El evento **priorizar** debe soportar a siguiente secuencia:
 
@@ -51,7 +51,7 @@ El evento **priorizar** debe soportar a siguiente secuencia:
 {% include evento-priorizar.svg %}
 </div>
 
-## Consideraciones
+### Consideraciones
 
 Las validaciones internas que debe tener el implementador deben considerar cumplir con el conjunto de datos detallado en [Conjunto mínimo de datos](https://docs.google.com/spreadsheets/d/1FfW2gQvTMJbNpr2mH2DFpsftkMEPr5CW2ed9MkryuH4/edit#gid=1278902572&range=A3)
 
@@ -63,11 +63,11 @@ Las validaciones internas que debe tener el implementador deben considerar cumpl
 * Debe incluir el recurso [PractitionerLE](StructureDefinition-PractitionerLE.html)
 
 
-## Mensaje Bundle de Ejemplo
+### Mensaje Bundle de Ejemplo
 
 * [BundlePriorizarLE](Bundle-EjemploBundlePriorizar.html)
 
-## Notas
+### Notas
 
 * Notas Adicionales
 
