--- a/input/pagecontent/EventoReferenciar.mdX
+++ b/input/pagecontent/EventoReferenciar.mdX
@@ -1,4 +1,4 @@
-# Evento: Referenciar
+## Evento: Referenciar
 
 El evento REFERENCIAR tiene asociado los siguientes códigos de evento: 
 
@@ -12,7 +12,7 @@ Los codigos de evento deben ser incluidos en el recurso **MessageHeader.evenCodi
 
 
 
-## Bundle de Envío
+### Bundle de Envío
 
 <br>
 <div align="center" >
@@ -32,7 +32,7 @@ Los recursos usados en este evento son los siguientes:
 * [PractitionerLE](StructureDefinition-PractitionerLE.html): Recurso que permite reflejar la informacion asociada a la identificación del profesional de la salud.
 
 
-## Relaciones de Recursos
+### Relaciones de Recursos
 
 <br>
 <div align="center" >
@@ -42,14 +42,14 @@ Los recursos usados en este evento son los siguientes:
 <br>
 
 
-## Secuencia del Evento
+### Secuencia del Evento
 
 El evento iniciar debe soportar las siguientes secuencias:
 <div align="center" >
 {% include evento-referenciada.svg %}
 </div>
 
-## Consideraciones
+### Consideraciones
 
 Las validaciones internas que debe tener el implementador deben considerar cumplir con el conjunto de datos detallado en [Conjunto mínimo de datos](https://docs.google.com/spreadsheets/d/1FfW2gQvTMJbNpr2mH2DFpsftkMEPr5CW2ed9MkryuH4/edit#gid=1586023761&range=A3)
 
@@ -59,11 +59,11 @@ Las validaciones internas que debe tener el implementador deben considerar cumpl
 * Debe incluir el recurso [OrganizationLE](StructureDefinition-OrganizationLE.html)
 * Debe incluir el recurso [PractitionerRoleLE](StructureDefinition-PractitionerRoleLE.html)
 
-## Mensaje Bundle de Ejemplo
+### Mensaje Bundle de Ejemplo
 
 * [BundleReferenciadaLE](Bundle-EjemploBundleReferencia.html)
 
-## Notas
+### Notas
 
 * Notas Adicionales
 
