correciones en los md de los bundle

--- a/DeletePages/StructureDefinition-ExamenesAnteriores-intro.mdX
+++ b/DeletePages/StructureDefinition-ExamenesAnteriores-intro.mdX
@@ -1,5 +1,5 @@
 ### Consideraciones Generales
-Definir la explicacion de examenes Anteriores
+Es el resultado de todo examen 
 
 ### Consideraciones de Datos
 
